<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:hint="pass a time stamp here"
        android:maxLines="1" />

    <EditText
        android:id="@+id/fieldBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldTitle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:hint="win/lost"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSubmitPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-372dp"
        android:layout_marginLeft="-372dp"
        android:layout_marginTop="128dp"
        android:layout_toEndOf="@+id/fieldBody"
        android:layout_toRightOf="@+id/fieldBody"
        android:src="@drawable/ic_navigation_check_24"
        android:visibility="visible" />

</RelativeLayout>
